# Agentic_AI

./: README.md
00_agent/: readme.md
00_agent/structured_output/: .readme.md
00_swarm/: readme.md
01_hello_agent/: main.py
02_strucutured_output/recipe_agent/: main.py  pyproject.toml
04_hello_agent/: Readme.md
04_hello_agent/async_hellow_agent/: main.py  pyproject.toml
05_handsoff/01_Basic_handoff/: main.py  pyproject.toml
05_handsoff/02_Advance_handoff/: main.py  pyproject.toml
05_handsoff/practice/: .env  main.py  pyproject.toml
06_Tool_Calling/: .env  basic.ipynb
06_Tool_Calling/01_basic_tool/: .env  main.py  model_config.py  pyproject.toml
06_Tool_Calling/02_math_tool/: main.py  pyproject.toml
06_Tool_Calling/multo_tool_agent/: main.py  pyproject.toml
06_Tool_Calling/practice/: main.py  pyproject.toml
07_Streaming/stream/: pyproject.toml
07_dataclasses/data_classes/: main.py  pyproject.toml
AgentFastAPi/project/: README.md  agent.py  main.py  pyproject.toml
Browser_use/: .env  agent.py
Context/advance/: simple.py
Context/context_basic/: data.py  pyproject.toml
Paper_practice/agent_as_tools/: main.py  pyproject.toml
Paper_practice/agent_practice/: readme.md
Paper_practice/context/: .env  (+2 more)
VoiceAgent/voice/: agent_voice.py  pyproject.toml  recorder.py  requirement.txt  run_voice_agent.py
VoiceAgent/voice/configuration/: gemini_config.py
agent_depth/: main.py  pyproject.toml
exception/: .env  main.py  model_behaviour.py  pyproject.toml  userError.py
handsoff/: README.md  main.py  model_config.py  pyproject.toml
(+108 files in other folders)
