[project]
name = "voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "openai>=1.109.1",
    "openai-agents[voice]>=0.3.2",
    "pyaudio>=0.2.14",
    "python-decouple>=3.8",
    "sounddevice>=0.5.2",
]
